--- a/server/plugins/EaglerLogin/plugin.yml
+++ b/server/plugins/EaglerLogin/plugin.yml
@@ -2,8 +2,8 @@ name: EaglerLogin
 main: com.shadowlord.eaglerlogin.EaglerLoginPlugin
 version: 1.0
 api-version: "1.12"
-author: Namewalker
-description: Forces registration/login for Eagler clients; locks actions until authenticated.
+author: ShadowLord
+description: Forces registration/login; locks actions until authenticated.
 commands:
   register:
     description: Register an account
@@ -13,5 +13,5 @@ commands:
     usage: /login <password>
 permissions:
   eaglerlogin.bypass:
-    description: Bypass login protection (useful for admins or other plugins)
+    description: Bypass login protection
     default: op
