Server save point

--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -20,3 +20,9 @@ ShadowLord:
     X: 885.4476018082103
     Y: 67.0
     Z: 1363.8716722390513
+Ruger1:
+  base:
+    world: world
+    X: -1750.5871662184259
+    Y: 73.0
+    Z: 1830.2773083734055
