--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Oct 10 00:42:26 UTC 2025
+#Tue Oct 14 20:10:55 UTC 2025
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -17,9 +17,9 @@ level-name=world
 level-seed=
 level-type=DEFAULT
 max-build-height=256
-max-players=20
+max-players=10
 max-world-size=29999984
-motd=Welcome to Bitches Among Us
+motd=Welcome to the Namewalker Server!
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
