--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -36,3 +36,8 @@ Ruger1:
     X: -1750.5871662184259
     Y: 73.0
     Z: 1830.2773083734055
+  hobbit:
+    world: world
+    X: 776.9357951644866
+    Y: 83.0
+    Z: 1667.7528274519123
