--- a/servers/survival/plugins/Halloween/pom.xml
+++ b/servers/survival/plugins/Halloween/pom.xml
@@ -4,7 +4,7 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.eagler</groupId>
-  <artifactId>halloween</artifactId>
+  <artifactId>Halloween</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
