--- a/servers/survival/server.properties
+++ b/servers/survival/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Oct 30 23:58:31 UTC 2025
+#Fri Oct 31 00:34:06 UTC 2025
 rcon.ip=localhost
 view-distance=5
 max-build-height=256
@@ -17,7 +17,7 @@ prevent-proxy-connections=false
 generator-settings=
 resource-pack=
 level-name=world
-player-idle-timeout=60
+player-idle-timeout=6000
 rcon.password=6VYSYT
 motd=Welcome to the Namewalker Server\!
 debug=false
